samples/_failures_safe/1761158459_52188e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e17f734a.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_e17f734a.c:163:9: error: expected declaration or statement at end of input
  163 |         parser_advance(parser);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_e17f734a.c:163:9: error: expected declaration or statement at end of input
